--- a/visualstudio-redes/SocketUtils/SocketUtils.csproj
+++ b/visualstudio-redes/SocketUtils/SocketUtils.csproj
@@ -45,7 +45,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Readers\FileReader.cs" />
     <Compile Include="Readers\SimpleReader.cs" />
+    <Compile Include="Writers\FileWriter.cs" />
     <Compile Include="Writers\SimpleWriter.cs" />
   </ItemGroup>
   <ItemGroup>
