--- a/visualstudio-redes/WebServer/WebServer.csproj
+++ b/visualstudio-redes/WebServer/WebServer.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A4D239B3-F587-4921-B177-E6FFECD5EF1B}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{5CE4BD34-A280-40C9-9A07-E6F381473670}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SocketUtils</RootNamespace>
-    <AssemblyName>Socket.Utils</AssemblyName>
+    <RootNamespace>WebServer</RootNamespace>
+    <AssemblyName>WebServer</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,9 +31,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -44,18 +41,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Http\HttpHeader.cs" />
-    <Compile Include="Http\Readers\HttpHeaderReader.cs" />
+    <Compile Include="Peticion.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Readers\FileReader.cs" />
-    <Compile Include="Readers\ObjectReader.cs" />
-    <Compile Include="Readers\SimpleReader.cs" />
-    <Compile Include="Writers\FileWriter.cs" />
-    <Compile Include="Writers\ObjectWriter.cs" />
-    <Compile Include="Writers\SimpleWriter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SocketUtils\SocketUtils.csproj">
+      <Project>{a4d239b3-f587-4921-b177-e6ffecd5ef1b}</Project>
+      <Name>SocketUtils</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
